@@ -934,7 +934,7 @@ static const OptionInfo
   {
     { "Undefined", (ssize_t) UndefinedFilter, MagickTrue },
     { "Bartlett", (ssize_t) BartlettFilter, MagickFalse },
-    { "Bessel", (ssize_t) BesselFilter, MagickFalse },
+    { "Bessel", (ssize_t) JincFilter, MagickTrue }, /* backward compat name */
     { "Blackman", (ssize_t) BlackmanFilter, MagickFalse },
     { "Bohman", (ssize_t) BohmanFilter, MagickFalse },
     { "Box", (ssize_t) BoxFilter, MagickFalse },
@@ -944,6 +944,7 @@ static const OptionInfo
     { "Hamming", (ssize_t) HammingFilter, MagickFalse },
     { "Hanning", (ssize_t) HanningFilter, MagickFalse },
     { "Hermite", (ssize_t) HermiteFilter, MagickFalse },
+    { "Jinc", (ssize_t) JincFilter, MagickFalse },
     { "Kaiser", (ssize_t) KaiserFilter, MagickFalse },
     { "Lagrange", (ssize_t) LagrangeFilter, MagickFalse },
     { "Lanczos", (ssize_t) LanczosFilter, MagickFalse },
